fix | #1 | Fixed header

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <div class="header">
-    <div class="top-nar-bar">
+    <div class="top-nav-bar">
+      <img class="top-nav-bar__logo-w3" src="./assets/logo.png" alt="W3Schools Logo">
       <div class="top-nav-bar__left">
-        <img src="./assets/logo.png" class="left__logo-w3" alt="W3Schools Logo">
         <div class="items">
           <a href="#">Tutorials <i class="fa fa-caret-down"></i></a>
           <a href="#">Exercises <i class="fa fa-caret-down"></i></a>
@@ -32,13 +32,13 @@
           <a href="#"><i class="fa-solid fa-code"></i> Spaces</a>
           <a href="#"><i class="fa-solid fa-cart-shopping"></i> Get Certified</a>
         </div>
-        <div class="form">
-          <a href="#">Sign Up</a>
-          <a style="color:black" href="#">Log in</a>
-        </div>
+      </div>
+      <div class="top-nav-bar__login-register">
+        <a href="#">Sign Up</a>
+        <a style="color:black" href="#">Log in</a>
       </div>
     </div>
-    <div class="sub-top-bar">
+    <div class="sub-top-nav-bar">
       <a class="selected" href="#">HTML</a>
       <a href="#">CSS</a>
       <a href="#">JAVASCRIPT</a>
@@ -62,30 +62,131 @@
     </div>
   </div>
   <div class="container">
-    <div  class="left-container">
+    <div class="left-container">
       <div class="left-container__items">
         <h2 class="items__title">HTML Tutorial</h2>
         <div class="items__a">
           <a href="#" class="selected" style="color: white;">HTML HOME</a>
           <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
           <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
           <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
           <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
           <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
+        </div>
+      </div>
+      <div class="left-container__items">
+        <h2 class="items__title">HTML Forms</h2>
+        <div class="items__a">
           <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
           <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
           <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
           <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
           <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
+        </div>
+      </div>
+      <div class="left-container__items">
+        <h2 class="items__title">HTML Graphics</h2>
+        <div class="items__a">
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
           <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
           <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
+        </div>
+      </div>
+      <div class="left-container__items">
+        <h2 class="items__title">HTML Media</h2>
+        <div class="items__a">
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
           <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
           <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
         </div>
       </div>
       <div class="left-container__items">
         <h2 class="items__title">HTML Tutorial</h2>
         <div class="items__a">
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
+          <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
+          <a href="#" >HTML HOME</a>
+          <a href="#" >HTML HOME</a>
+          <a href="#" >HTML HOME</a>
+          <a href="#" >HTML HOME</a>
+          <a href="#" >HTML HOME</a>
+          <a href="#" >HTML HOME</a>
+          <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
+          <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
+          <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
+          <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
+          <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
+          <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
           <a href="#" >HTML HOME</a>
           <a href="#" >HTML HOME</a>
           <a href="#" >HTML HOME</a>
@@ -94,183 +195,35 @@
           <a href="#" >HTML HOME</a>
           <a href="#" >HTML HOME</a>
           <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
           <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
           <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
         </div>
       </div>
       <div class="left-container__items">
-        <h2 class="items__title">HTML Tutorial</h2>
+        <h2 class="items__title">HTML End</h2>
         <div class="items__a">
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-        </div>
-      </div>
-      <div class="left-container__items">
-        <h2 class="items__title">HTML Tutorial</h2>
-        <div class="items__a">
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-        </div>
-      </div>
-      <div class="left-container__items">
-        <h2 class="items__title">HTML Tutorial</h2>
-        <div class="items__a">
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-        </div>
-      </div>
-      <div class="left-container__items">
-        <h2 class="items__title">HTML Tutorial</h2>
-        <div class="items__a">
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
-          <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
+          <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
+          <a href="#" >HTML HOME</a>
+          <a href="#" >HTML Intro</a>
+          <a href="#" >HTML Editor</a>
+          <a href="#" >HTML Basic</a>
         </div>
       </div>
     </div>
@@ -384,7 +337,7 @@
           <img src="./assets/advertiment2.png" alt="">
         </div>   
       </div>
-      <div class="footer">
+      <div class="right-container__footer">
         <div class="footer__content">
           <div class="footer__items">
             <img src="./assets/logo.png" class="footer__logo-w3" alt="W3Schools Logo">
