fix | #2 | Fixed some class in container

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     </div>
   </div>
   <div class="container">
-    <div class="left-container">
-      <div class="left-container__items">
+    <div class="left-menu">
+      <div class="left-menu__items">
         <h2 class="items__title">HTML Tutorial</h2>
         <div class="items__a">
           <a href="#" class="selected" style="color: white;">HTML HOME</a>
@@ -89,7 +89,7 @@
           <a href="#" >HTML Basic</a>
         </div>
       </div>
-      <div class="left-container__items">
+      <div class="left-menu__items">
         <h2 class="items__title">HTML Forms</h2>
         <div class="items__a">
           <a href="#" >HTML HOME</a>
@@ -114,7 +114,7 @@
           <a href="#" >HTML Basic</a>
         </div>
       </div>
-      <div class="left-container__items">
+      <div class="left-menu__items">
         <h2 class="items__title">HTML Graphics</h2>
         <div class="items__a">
           <a href="#" >HTML Editor</a>
@@ -129,7 +129,7 @@
           <a href="#" >HTML Basic</a>
         </div>
       </div>
-      <div class="left-container__items">
+      <div class="left-menu__items">
         <h2 class="items__title">HTML Media</h2>
         <div class="items__a">
           <a href="#" >HTML Editor</a>
@@ -146,7 +146,7 @@
           <a href="#" >HTML Basic</a>
         </div>
       </div>
-      <div class="left-container__items">
+      <div class="left-menu__items">
         <h2 class="items__title">HTML Tutorial</h2>
         <div class="items__a">
           <a href="#" >HTML Editor</a>
@@ -209,7 +209,7 @@
           <a href="#" >HTML Basic</a>
         </div>
       </div>
-      <div class="left-container__items">
+      <div class="left-menu__items">
         <h2 class="items__title">HTML End</h2>
         <div class="items__a">
           <a href="#" >HTML Editor</a>
@@ -227,8 +227,8 @@
         </div>
       </div>
     </div>
-    <div class="right-container">
-      <div class="right-container__body">
+    <div class="w3-container">
+      <div class="w3-container__body">
         <div class="main">
           <div class="advertisements">
             <img src="./assets/advertiment1.png" alt="">
@@ -337,7 +337,7 @@
           <img src="./assets/advertiment2.png" alt="">
         </div>   
       </div>
-      <div class="right-container__footer">
+      <div class="w3-container__footer">
         <div class="footer__content">
           <div class="footer__items">
             <img src="./assets/logo.png" class="footer__logo-w3" alt="W3Schools Logo">
