--- a/index.html
+++ b/index.html
@@ -229,23 +229,23 @@
     </div>
     <div class="w3-container">
       <div class="w3-container__body">
-        <div class="main">
-          <div class="advertisements">
+        <div class="w3-container__main">
+          <div class="main__google-advertisements">
             <img src="./assets/advertiment1.png" alt="">
           </div>
-          <div class="intro">
-            <h1 class="intro__title">HTML Tutorial</h1>
-            <div class="next-pre">
-              <a href="#" class="main__button">❮ Home</a>
-              <a href="#" class="main__button">Next ❯</a>
-            </div>
+          <h1 class="main__h1">HTML Tutorial</h1>
+          <div class="main__next-pre">
+            <a href="#" class="main__button">❮ Home</a>
+            <a href="#" class="main__button">Next ❯</a>
+          </div>
+          <div class="main__intro">
             <div class="intro__content">
               <div class="content__inform">
                 <p>HTML is the standard markup language for Web pages.</p>
                 <p>With HTML you can create your own Website.</p>
                 <p>HTML is easy to learn - You will enjoy it!</p>
               </div>
-              <a class="main__button">Study our free HTML Tutorial »</a>
+              <a class="intro__button main__button">Study our free HTML Tutorial »</a>
             </div>
           </div>
           <hr>
@@ -259,9 +259,9 @@
               <span class="tagnamecolor" style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>/head<span class="tagcolor" style="color:mediumblue">&gt;</span></span><br><span class="tagnamecolor" style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>body<span class="tagcolor" style="color:mediumblue">&gt;</span></span><br><br><span class="tagnamecolor" style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>h1<span class="tagcolor" style="color:mediumblue">&gt;</span></span>This is a Heading<span class="tagnamecolor" style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>/h1<span class="tagcolor" style="color:mediumblue">&gt;</span></span><br><span class="tagnamecolor" style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>p<span class="tagcolor" style="color:mediumblue">&gt;</span></span>This is a paragraph.<span class="tagnamecolor" style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>/p<span class="tagcolor" style="color:mediumblue">&gt;</span></span><br><br>
               <span class="tagnamecolor" style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>/body<span class="tagcolor" style="color:mediumblue">&gt;</span></span><br><span class="tagnamecolor" style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>/html<span class="tagcolor" style="color:mediumblue">&gt;</span></span>
             </div>
-            <a href="#" class="main__button">Try it Yourself</a>
+            <a href="#" class="example__button main__button">Try it Yourself</a>
           </div>
-          <p><strong>Click on the "Try it Yourself" button to see how it works.</strong></p>
+          <p class="main__p"><strong>Click on the "Try it Yourself" button to see how it works.</strong></p>
           <hr>
           <h2 class="main__h2">HTML Examples</h2>
           <p class="main__p">In this HTML tutorial, you will find more than 200 examples. With our online "Try it Yourself" editor, you can edit and test each example yourself!</p>
@@ -271,84 +271,84 @@
           <hr>
           <h2 class="main__h2">HTML Exercises</h2>
           <p class="main__p">This HTML tutorial also contains nearly 100 HTML exercises.</p>
-          <div class="main__exercises">
-            <h2 class="main__h2" style="color: white;">Test Yourself With Exercises</h2>
-            <div class="exercises__content">
-              <h2 class="main__h2">Exercise:</h2>
-              <p class="main__p">Add a "tooltip" to the paragraph below with the text "About W3Schools".</p>
-              <div class="exercises__code">
+          <div class="main__exercise-form">
+            <h2 class="exercise-form__h2 main__h2" style="color: white;">Test Yourself With Exercises</h2>
+            <div class="exercises__window">
+              <h2 class="window__h2 main__h2">Exercise:</h2>
+              <p class="window__p main__p">Add a "tooltip" to the paragraph below with the text "About W3Schools".</p>
+              <div class="window__pre-container">
                 &lt;p <input name="ex1" maxlength="5" style="width: 54px;">="About W3Schools"&gt;W3Schools is a web developer's site.&lt;/p&gt;
               </div>
-              <a href="#" class="main__button">Submit Answer »</a>
+              <a href="#" class="window__button main__button">Submit Answer »</a>
               
-              <a href="" class="exercises__link">Start the Exercise</a>
+              <a href="" class="window__link">Start the Exercise</a>
             </div>
           </div>
           <hr>
           <h2 class="main__h2">HTML Quiz Test</h2>
           <p class="main__p">Test your HTML skills with our HTML Quiz!</p>
-          <a href="#" class="main__button">Start HTML Quiz!</a>
+          <a class="main__button" href="#">Start HTML Quiz!</a>
           <hr>
           <h2 class="main__h2">My Learning</h2>
           <p class="main__p">Track your progress with the free "My Learning" program here at W3Schools.</p>
           <p class="main__p">Log in to your account, and start earning points!</p>
           <p class="main__p">This is an optional feature. You can study at W3Schools without using My Learning.</p>
-          <div class="my-learning__img">
-            <img  src="./assets/mylearning.png" alt="">
+          <div class="main__img">
+            <img src="./assets/mylearning.png" alt="">
           </div>
           <hr>
           <h2 class="main__h2">HTML References</h2>
-          <p>At W3Schools you will find complete references about HTML elements, attributes, events, color names, entities, character-sets, URL encoding, language codes, HTTP messages, browser support, and more:</p>
-          <div class="reference__table">
-            <a href="#">HTML Elements</a>
-            <a href="#">Browser Support</a>
-            <a href="#">Attributes</a>
-            <a href="#">Global Attributes</a>
-            <a href="#">Event Attributes</a>
-            <a href="#">Color Name</a>
-            <a href="#">Canvas</a>
-            <a href="#">Audio/Video DOM</a>
-            <a href="#">Character Sets</a>
-            <a href="#">URL Encoding</a>
-            <a href="#">Language Codes</a>
-            <a href="#">Country Codes</a>
-            <a href="#">HTTP Messages</a>
-            <a href="#">Px to Em Converter</a>
-            <a href="#">Keyboard Shortcuts</a>
+          <p class="main__p">At W3Schools you will find complete references about HTML elements, attributes, events, color names, entities, character-sets, URL encoding, language codes, HTTP messages, browser support, and more:</p>
+          <div class="main__table">
+            <a class="table-third" href="#">HTML Elements</a>
+            <a class="table-third" href="#">Browser Support</a>
+            <a class="table-third" href="#">Attributes</a>
+            <a class="table-third" href="#">Global Attributes</a>
+            <a class="table-third" href="#">Event Attributes</a>
+            <a class="table-third" href="#">Color Name</a>
+            <a class="table-third" href="#">Canvas</a>
+            <a class="table-third" href="#">Audio/Video DOM</a>
+            <a class="table-third" href="#">Character Sets</a>
+            <a class="table-third" href="#">URL Encoding</a>
+            <a class="table-third" href="#">Language Codes</a>
+            <a class="table-third" href="#">Country Codes</a>
+            <a class="table-third" href="#">HTTP Messages</a>
+            <a class="table-third" href="#">Px to Em Converter</a>
+            <a class="table-third" href="#">Keyboard Shortcuts</a>
           </div>
-          <div class="get-career">
+          <div class="main__panel">
             <img src="./assets/career.png" alt="">
           </div>
           <hr>
-          <div class="video">
+          <div class="main__video">
             <img src="./assets/video.png" alt="">
           </div>
           <hr>
-          <div class="next-pre">
+          <div class="main__next-pre">
             <a href="#" class="main__button">❮ Home</a>
             <a href="#" class="main__button">Next ❯</a>
           </div>
-          <div class="pathfinder">
+          <div class="main__wrapper">
             <img src="./assets/pathfinder.png" alt="">
           </div>
           
         </div>
-        <div class="right">
+        <div class="w3-container__right">
           <img src="./assets/advertiment2.png" alt="">
         </div>   
       </div>
       <div class="w3-container__footer">
         <div class="footer__content">
           <div class="footer__items">
-            <img src="./assets/logo.png" class="footer__logo-w3" alt="W3Schools Logo">
-            <a href="">SPACES</a>
-            <a href="">UPGRADE</a>
-            <a href="">AD-FREE</a>
-            <a href="">NEWSLETTER</a>
-            <a href="">GET CERTIFIED</a>
-            <a href="">CONTACT US</a>
+            <img class="footer__logo-w3" src="./assets/logo.png" alt="W3Schools Logo">
+            <a class="footer__alink" href="">SPACES</a>
+            <a class="footer__alink" href="">UPGRADE</a>
+            <a class="footer__alink" href="">AD-FREE</a>
+            <a class="footer__alink" href="">NEWSLETTER</a>
+            <a class="footer__alink" href="">GET CERTIFIED</a>
+            <a class="footer__alink" href="">CONTACT US</a>
           </div>
-          <div class="footer__lessons">
+          <div class="footer__links">
             <div class="type">
               <h5 class="type__title">Top Tutorials</h5>
               <a class="type__link" href="#">HTML Tutorial</a>
@@ -424,7 +424,7 @@
             <a href="/about/about_privacy.asp" class="ga-bottom">cookie and privacy policy</a>.<br><br>
             <a href="/about/about_copyright.asp" class="ga-bottom">Copyright 1999-2024</a> by Refsnes Data. All Rights Reserved.
             <a href="//www.w3schools.com/w3css/default.asp" class="ga-bottom">W3Schools is Powered by W3.CSS</a>.<br><br>
-            </div>
+          </div>
         </div>
       </div>
     </div>
